// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard should increment counter 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    +1
  </button>
</div>
`;

exports[`ProductCard should increment counter 2`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product card
  </h1>
  <span>
    1
  </span>
  <button
    onClick={[Function]}
  >
    +1
  </button>
</div>
`;

exports[`ProductCard should show component 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product card
  </h1>
</div>
`;
